adcionei um parágrafo

--- a/Ex_/index.html
+++ b/Ex_/index.html
@@ -9,5 +9,6 @@
   <h1>Oiê</h1>  
   <hr>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, maiores commodi nobis nemo omnis tempora tempore odit architecto ad provident laboriosam, inventore hic quisquam harum adipisci aspernatur molestias cumque quo?</p>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non accusamus ad explicabo quod adipisci cum ipsa quos ab veniam eius aperiam, molestias temporibus quisquam incidunt possimus! Possimus corporis vero earum.</p>
 </body>
 </html>
